| Bug #1113 | If in a trans, a non-trans table is updated by INSERTSELECT, ROLLBACK, no error | ||
|---|---|---|---|
| Submitted: | 21 Aug 2003 8:41 | Modified: | 22 Aug 2003 7:02 |
| Reporter: | Guilhem Bichot | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 4.0 | OS: | Any (all) |
| Assigned to: | Guilhem Bichot | Target Version: | |
[21 Aug 2003 8:41]
Guilhem Bichot
[22 Aug 2003 7:02]
Guilhem Bichot
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
ChangeSet@1.1576.4.1, 2003-08-22 15:39:24+02:00, guilhem@mysql.com
